class AppStrings {
  // General
  static const String appName = 'Hedieaty';
  static const String welcomeMessage = 'Welcome to Hedieaty';

  // Auth
  static const String login = 'Login';
  static const String signup = 'Sign Up';
  static const String email = 'Email';
  static const String password = 'Password';
  static const String forgotPassword = 'Forgot Password?';

  // Pages
  static const String homePageTitle = 'Home';
  static const String eventsPageTitle = 'Events';
  static const String giftsPageTitle = 'Gifts';
  static const String profilePageTitle = 'Profile';

  // Errors
  static const String networkError = 'Network error occurred.';
  static const String invalidInput = 'Invalid input. Please try again.';
}